layout fix: footer should always align to bottom of the screen now

--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,13 @@ html, body {
   background-color: var(--bg-body);
 }
 
+body {
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: -webkit-max-content 1fr -webkit-max-content;
+  grid-template-rows: max-content 1fr max-content;
+}
+
 :root {
   /*    font sizes    */
   --fs-100: clamp(0.85rem, (0.85 * (1 - 1 * (var(--client-width) - 20) / 43) + 1 * (var(--client-width) - 20) / 43 * 1) * 1rem, 1rem);
@@ -192,18 +199,6 @@ address {
 
 .article-segment p + p {
   margin-top: var(--segment-paragraph-gap, 1.15rem);
-}
-
-.container {
-  max-width: max(65rem, 85vw);
-  min-height: 60vh;
-  margin-inline: auto;
-  padding-inline: var(--margin-md);
-}
-@media (min-width: 41rem) {
-  .container {
-    padding-inline: var(--margin);
-  }
 }
 
 .col {
@@ -453,11 +448,35 @@ address {
   color: var(--clr-accent);
 }
 
+.container {
+  max-width: max(65rem, 85vw);
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0;
+          flex: 1 0;
+  padding-inline: var(--margin-md);
+}
+@media (min-width: 41rem) {
+  .container {
+    padding-inline: var(--margin);
+  }
+}
+
+.main-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .main-grid {
   display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: -webkit-max-content;
+  grid-auto-rows: max-content;
   padding-block: var(--margin) calc(var(--margin) * 2);
   row-gap: var(--row-gap, var(--margin-lg));
-  grid-template-columns: 1fr;
 }
 .main-grid section {
   width: 100%;
