--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -20,3 +20,8 @@ html, body {
 
     background-color: var(--bg-body);
 }
+body {
+    min-height: 100vh;
+    display: grid;
+    grid-template-rows: max-content 1fr max-content;
+}
