--- a/sass/base/_utility.scss
+++ b/sass/base/_utility.scss
@@ -1,17 +1,3 @@
-.container {
-    max-width: max(65rem, 85vw);
-    min-height: 60vh;
-    margin-inline: auto;
-    padding-inline: var(--margin-md);
-
-    @media (min-width: $bp-tablet) {
-        padding-inline: var(--margin);
-    }
-}
-// .container {
-//     max-width: 100%;
-//     margin-inline: var(--margin);
-// }
 
 @mixin col {
     display: flex;
